--- a/src/CSS/Notes.css
+++ b/src/CSS/Notes.css
@@ -9,13 +9,13 @@
 
 .notesContainer {
   margin-top: -7px;
-  margin-left: 50px;
+  margin-left: 1vw;
   padding-left: 20px;
   padding-right: 20px;
   padding-top: 10px;
   border: 1px solid #ccc;
-  width: 400px;
-  height: 330px;
+  width: 30vw;
+  height: 23vw;
   background-color: #1A535C;
   border-style: solid;
   border-color: #3A3A3A;
@@ -23,7 +23,8 @@
 }
 
 .notesList {
-  height: 150px;
+  height: 10vw;
+  margin-top: 3vw;
   overflow-y: scroll;
 }
 
