--- a/src/CSS/ProjectMaterialsCSS.css
+++ b/src/CSS/ProjectMaterialsCSS.css
@@ -1,12 +1,13 @@
 .materialsContainer {
   margin-top: -7px;
   margin-left: -20px;
-  margin-right: 60px;
-  padding-left: 60px;
-  padding-right: 30px;
+  /* margin-right: 60px; */
+  padding-left: 2vw;
+  padding-right: 2vw;
   padding-top: 10px;
   border: 1px solid #ccc;
-  width: 400px;
+  width: 30vw;
+  height: 23vw;
   background-color: #1A535C;
   border-style: solid;
   border-color: #3A3A3A;
@@ -15,7 +16,8 @@
 
 .materialList {
   overflow-y: scroll;
-  height: 120px;
+  margin-top: -1vw;
+  height: 7vw;
 }
 
 .button {
