--- a/src/CSS/ToDoList.css
+++ b/src/CSS/ToDoList.css
@@ -43,13 +43,14 @@
 
 .toDoListContainer {
   margin-top: -7px;
-  margin-left: 55px;
+  margin-left: 2.8vw;
   padding-left: 20px;
   padding-right: 20px;
   padding-top: 10px;
   padding-bottom: 10px;
   border: 1px solid #ccc;
-  width: 400px;
+  width: 30vw;
+  height: 23vw;
   background-color: #1A535C;
   border-style: solid;
   border-color: #3A3A3A;
@@ -58,7 +59,7 @@
 
 .toDoListList {
   overflow-y: scroll;
-  height: 175px;
+  height: 9.5vw;
 }
 
 .toDoListHeader{
